<resources>
    <string name="app_name">SageTV MiniClient</string>
    <string name="media_player_preferences">Playback Settings</string>
    <string name="title_use_vlc_preference">Use VLC</string>
    <string name="title_use_hardware_acceleration_preference">Use Hardware Acceleration</string>
    <string name="summary_use_hardware_acceleration_preference">If disabled, then no hardware acceleration will be used when decoding the video.</string>
    <string name="logging_preferences">Logging</string>
    <string name="title_use_log_to_sdcard_preference">Log to File</string>
    <string name="summary_use_log_to_sdcard_acceleration_preference">If enabled, all logging will go to the sagetv-miniclient.txt log file on the root of the SD CARD</string>
    <string name="title_list_loglevels_preference">Logging Level</string>
    <string name="summary_list_loglevels_preference">(%s) - The logging level</string>
    <string name="dialog_title_list_loglevels_preference">Set Logging Level</string>
    <string name="dialog_title_list_streaming_mode_preference">Set Stream Mode</string>
    <string name="summary_list_streaming_mode_preference">(%s) - Fixed is preferred and offers HD transcoding and remuxing.  Dynamic adapts to bandwidth but only in SD</string>
    <string name="title_list_streaming_mode_preference">Streaming Mode</string>
    <string name="send_log">Send Log</string>
    <string name="send_log_summary">If using Send Log, then make sure that you are NOT logging to file.  Logging to a File will result in Send Log only capturing a partial log.</string>
    <string name="auto_connect_settings">Auto Connect</string>
    <string name="summary_auto_connect_to_last_server_preference">Automatically connect to the last connected server on start up</string>
    <string name="title_auto_connect_to_last_server_preference">Auto Connect</string>
    <string name="dialog_title_auto_connect_delay_preference">Set Auto Connect Timeout</string>
    <string name="title_auto_connect_delay_preference">Auto Connect Delay</string>
    <string name="summary_auto_connect_delay_preference">(%s) - The number of seconds to wait before auto connecting to the last server.</string>
    <string name="msg_auto_connect">Will Auto Connect in %s Seconds</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="debug_preferences">Debug Settings</string>
    <string name="summary_debug_log_unmapped_keypresses_preference">If enabled then remote key presses that are not mapped will be show as a message in the UI when they happen</string>
    <string name="title_debug_log_unmapped_keypresses_preference">Show Unmapped Keypresses</string>
    <string name="terminate_onpause_summary">If true, then when the app pauses, it will fully terminate the application and close all connections</string>
    <string name="terminate_onpause_title">Terminate on Pause</string>
    <string name="force_nonlocal_connection_title">Force non local network</string>
    <string name="force_nonlocal_connection_summary">When enabled, it may increase rendering performance on a WIRED connection.  Never enable for WIFI or Placeshifter.</string>
    <string name="use_bitmap_images_title">Use Bitmap Images</string>
    <string name="use_bitmap_images_summary">Disabling this may increase performance for WIRED connections, but should never be enabled for WIFI connections</string>
    <string name="GFX_SURFACES_title">Use Surfaces</string>
    <string name="GFX_SURFACES_summary">Disabling this will decrease rendering performance, but may reduce the screen flicker</string>
    <string name="application_settings">General</string>
    <string name="use_exoplayer_preference">If enabled, then ExoPlayer will be used for video playback</string>
    <string name="use_exoplayer_preference_title">Use ExoPlayer</string>
    <string name="title_use_http_proxy_preference">Use HTTP Proxy</string>
    <string name="summary_use_http_proxy_preference">Some players cannot access SageTV streams and require an http proxy.</string>
    <string name="hardware_decoders">IJK: Configure Hardware Decoders</string>
    <string name="msg_player_failed">Failed to play the selected media file (URL: %s)</string>
    <string name="use_stateful_remote_title">Use Stateful Remote</string>
    <string name="use_stateful_remote_summary">If enabled, then the Select will be Pause/Play if the Video UI is visible</string>
    <string name="summary_announce_software_decoder_preference">If enabled, a message will appear when using software decoding</string>
    <string name="title_announce_software_decoder_preference">IJK: Show message when using Software Decoders</string>
    <string name="main_label_settings">Settings</string>
    <string name="sage_title">SageTV MiniClient</string>
    <string name="title_switch_player">Change Default Video Player</string>
    <string name="msg_switch_player">Your current player is %1$s.  Do you want to change it to %2$s?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="yes_once">Yes, One Time Only</string>
    <string name="msg_player_changed">Player has changed to %s</string>
    <string name="msg_player_changed_one_time">Player has changed to %1$s, but will revert to %2$s after the next video play.</string>
    <string name="use_native_resolution_title">Use Native Resolution</string>
    <string name="use_native_resolution_summary">If disabled, then the resolution reported to sagetv will be half of the native resolution, and the screen will be scaled on the client to the native resolution.  You might do this on older hardware.</string>
    <string name="exit_to_home_screen_title">Exit to Home Screen</string>
    <string name="exit_to_home_screen_summary">If true, then when SageTV exits, it will exit back to the Home Screen and not to the Server Selector</string>
    <string name="button_close">Close</string>
    <string name="msg_no_locator">Item does not have a locator id</string>
    <string name="msg_remove_server">Are you sure you want to remove this server?</string>
    <string name="title_remove_server">Remove Server?</string>
    <string name="msg_connecting_locator">Connecting to %s using Locator Service…</string>
    <string name="msg_connecting">Connecting to %s…</string>
    <string name="title_detailed_buffer_stats">Detailed Push Buffer Stats</string>
    <string name="summary_detailed_buffer_stats">Send detailed push buffer statistics to the server</string>
    <string name="msg_change_aspect_ratio">Aspect Ratio: %s</string>
    <string name="use_tv_ui_on_tablet_summary">Use TV UI on Phone/Tablet</string>
    <string name="use_tv_ui_on_tablet_title">If enabled, then the leanback launcher will be used on a Phone/Tablet</string>
    <string name="ijkplayer_preferences">IJKPlayer Preferences</string>
    <string name="ijk_disable_hardware_codec_mpeg2_preference">Some hardware devices have faulty MPEG2 hardware decoders.  If you have issues with mpeg2 video, enable this.</string>
    <string name="ijk_disable_hardware_codec_mpeg2_title">IJK: Disable MPEG2 Hardware Decoding</string>
    <string name="enable_disable_decoders_pref_summary">Enable/Disable hardware decoders</string>
    <string name="title_prefer_android_software_decoders_preference">IJK: Allow Native Software Decoders</string>
    <string name="summary_prefer_android_software_decoders_preference">IJK will normally use ffmpeg software decoders over native android software decoders.  Enabling this allows IJK to use the native software decoders instead of ffmpeg</string>
    <string name="title_disable_hardware_decoders_preference">IJK: Disable Hardware Decoders</string>
    <string name="summary_disable_hardware_decoders_preference">Disable all hardware decoders.  If enabled, then ONLY software decoders are used.</string>
    <string name="title_disable_audio_passthrough_preference">Exo: Disable Audio Passthrough</string>
    <string name="summary_disable_audio_passthrough_preference">If enabled, then ffmpeg will be used to decode AC-3 audio.</string>
    <string name="title_debug_ar_preference">Debug Aspect Ratios</string>
    <string name="summary_debug_ar_preference">Turns on logging and UI tools for debugging Aspect Ratios</string>
    <string name="dialog_title_list_mem_cache_preference">Set Memory Image Cache</string>
    <string name="title_list_mem_cache_preference">Memory Image Cache</string>
    <string name="summary_list_mem_cache_preference">Sets the amount of Memory to use for Image Caching.  Higher values will result in better peformance, especially with Fanart enabled.</string>
    <string name="title_list_disk_cache_preference">Disk Cache for Images</string>
    <string name="show_exo_decoders">Show ExoPlayer MediaCodecs</string>
    <string name="show_exo_decoders_pref_summary">Show the MediaCodecs that are available on this device</string>
    <string name="exoplayer_ffmpeg_extension_title">ExoPlayer FFmpeg Audio Extension</string>
    <string name="exoplayer_ffmpeg_extension_summary">Sets how the FFmpeg extension is utilized in ExoPlayer. Preferred for audio decoding, On for decoding codecs which the device does not support natively or off.</string>
    <string name="dialog_title_list_transcoding_format_preference">Container Format</string>
    <string name="summary_list_transcoding_formats_preference">%s - The container format that will be used for transcoding</string>
    <string name="title_list_transcoding_formats_preference">Container Format</string>
    <string name="dialog_title_list_video_bitrate_preference">Bitrate (kbps)</string>
    <string name="summary_list_video_bitrate_preference">%s - Sets the target video encoding bitrate.  This value should be set to coincide with the network connection speed</string>
    <string name="title_list_video_bitrate_preference">Video Bitrate (kbps)</string>
    <string name="dialog_title_list_video_fps_preference">Frames Per Second</string>
    <string name="summary_list_video_fps_preference">%s - The framerate to encode the video at.  Set to use source if you want it to encode the video with the source framerate</string>
    <string name="title_list_video_fps_preference">Framerate</string>
    <string name="dialog_title_list_video_resolution_preference">Video Resolution</string>
    <string name="summary_list_video_resolution_preference">%s - The resolution to encode the video at.  Set to use source if you want it to encode the video with the source resolution</string>
    <string name="title_list_video_resolution_preference">Resolution</string>
    <string name="dialog_title_list_audio_codec_preference">Audio Codec</string>
    <string name="summary_list_audio_codec_preference">%s - The audio code to encode the audio with.  Set to use source if you do not want to re-encode the audio</string>
    <string name="title_list_audio_codec_preference">Audio Codec</string>
    <string name="dialog_title_list_audio_bitrate_preference">Audio Bitrate</string>
    <string name="summary_list_audio_bitrate_preference">%s - The bitrate to encode the audio at</string>
    <string name="title_list_audio_bitrate_preference">Audio Bitrate (kbps)</string>
    <string name="dialog_title_list_audio_channels_preference">Channels</string>
    <string name="summary_list_audio_channels_preference">%s - The number of audio channels to encode.  Set to use source if you encode the audio with the source number of channels</string>
    <string name="title_list_audio_channels_preference">Channels</string>
    <string name="dialog_title_list_transcoding_setting_preference">Transcoding Preference</string>
    <string name="summary_list_transcoding_setting_preference">%s - When set to \"When Needed\" SageTV will decided based on codec support and bandwidth if transcoding is needed</string>
    <string name="title_list_transcoding_setting_preference">Transcoding Preference</string>
</resources>