<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/media_player_preferences">

        <ListPreference
            android:defaultValue="dynamic"
            android:dialogTitle="@string/dialog_title_list_streaming_mode_preference"
            android:entries="@array/entries_list_streaming_mode_preference"
            android:entryValues="@array/entryvalues_list_streaming_mode_preference"
            android:key="streaming_mode"
            android:summary="@string/summary_list_streaming_mode_preference"
            android:title="@string/title_list_streaming_mode_preference"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_exoplayer"
            android:summary="@string/use_exoplayer_preference"
            android:title="@string/use_exoplayer_preference_title"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/application_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="long_press_select_for_osd"
            android:summary="@string/long_press_select_for_osd_preference_summary"
            android:title="@string/long_press_select_for_osd_preference"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_stateful_remote"
            android:summary="@string/use_stateful_remote_summary"
            android:title="@string/use_stateful_remote_title"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_native_resolution"
            android:summary="@string/use_native_resolution_summary"
            android:title="@string/use_native_resolution_title"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="exit_to_home_screen"
            android:summary="@string/exit_to_home_screen_summary"
            android:title="@string/exit_to_home_screen_title"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_tv_ui_on_tablet"
            android:summary="@string/use_tv_ui_on_tablet_summary"
            android:title="@string/use_tv_ui_on_tablet_title"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="animations_disabled"
            android:summary="@string/animations_disabled_preference_summary"
            android:title="@string/animations_disabled_preference"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/auto_connect_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="auto_connect_to_last_server"
            android:summary="@string/summary_auto_connect_to_last_server_preference"
            android:title="@string/title_auto_connect_to_last_server_preference"/>

        <ListPreference
            android:dependency="auto_connect_to_last_server"
            android:defaultValue="10"
            android:dialogTitle="@string/dialog_title_auto_connect_delay_preference"
            android:entries="@array/entries_list_auto_connect_delay_preference"
            android:entryValues="@array/entryvalues_list_auto_connect_delay_preference"
            android:key="auto_connect_delay"
            android:summary="@string/summary_auto_connect_delay_preference"
            android:title="@string/title_auto_connect_delay_preference"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="app_destroy_on_pause"
            android:summary="@string/terminate_onpause_summary"
            android:title="@string/terminate_onpause_title"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/debug_preferences">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="debug_log_unmapped_keypresses"
            android:summary="@string/summary_debug_log_unmapped_keypresses_preference"
            android:title="@string/title_debug_log_unmapped_keypresses_preference"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="announce_software_decoder"
            android:summary="@string/summary_announce_software_decoder_preference"
            android:title="@string/title_announce_software_decoder_preference"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/logging_preferences">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_log_to_sdcard"
            android:summary="@string/summary_use_log_to_sdcard_acceleration_preference"
            android:title="@string/title_use_log_to_sdcard_preference"/>

        <ListPreference
            android:defaultValue="debug"
            android:dialogTitle="@string/dialog_title_list_loglevels_preference"
            android:entries="@array/entries_list_loglevels_preference"
            android:entryValues="@array/entryvalues_list_loglevels_preference"
            android:key="log_level"
            android:summary="@string/summary_list_loglevels_preference"
            android:title="@string/title_list_loglevels_preference"/>

        <Preference
            android:key="sendlog"
            android:summary="@string/send_log_summary"
            android:title="@string/send_log"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="About">
        <Preference
            android:key="version"
            android:summary=""
            android:title="Version"/>

        <EditTextPreference

            android:key="clientid"
            android:summary=""
            android:title="Cliend ID"/>

        <EditTextPreference

            android:key="ipaddress"
            android:summary=""
            android:title="Device IP Address"/>

        <EditTextPreference

            android:key="screensize"
            android:summary=""
            android:title="Native UI Resolution"/>

        <Preference
            android:key="decoders"
            android:summary=""
            android:title="@string/hardware_decoders"/>
    </PreferenceCategory>


</PreferenceScreen>